windows high contrast mode - multiple fixes
- fix search header field border in Windows High Contrast mode
- fix tab-nav active in Windows High Contrast mode
- add border for c-sf-button. This fix view in WHC mode.
- add justify-content - center for better view on mobile devices.

--- a/client/src/components/StreamField/scss/components/c-sf-button.scss
+++ b/client/src/components/StreamField/scss/components/c-sf-button.scss
@@ -6,12 +6,13 @@
     appearance: none;
     background: #eee;
     padding: $type-button-padding-vertical $type-button-padding-horizontal;
-    border: 0 none;
+    border: 1px solid #e6e6e6;
     border-radius: $border-radius;
     outline: none;
     cursor: pointer;
     overflow: hidden;
     transition: background-color $hover-transition-duration ease-in-out;
+    justify-content: center;
 
     &:hover,
     &:focus {
